...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivCollectionHeaderThumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        app:layout_constraintDimensionRatio="H, 4:3"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/intro_bg"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/ivCollectionHeaderIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_48"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_40"
                    android:adjustViewBounds="true" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCollectionDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_30"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_regular"
...
                    android:textColor="@color/main_black"
                    android:textSize="@dimen/dimen_text_size_16"
                    android:text="The clear tribute to the Dying Galata, bronze sculpture by the hellenic sculptor Epigonus which was part of the monumental complex of the Group of Attalus in Pergamon (230-220 B.C.) today known thanks to its roman marble copy (Rome, Musei Capitolini) is referred by Crocetti to the partisan struggle during the Resistance, the civil war that took place in Italy whic
            \nIn the gesture of the surrendering it’s implied the drama of the figuration: it’s not just a physical defeat but also an abandonment of the awareness, a deep and moral defeat that feels more like a voluntary act than a destiny occurrence" />

                <TextView
                    android:id="@+id/tvCollectionDescriptionReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_48"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/dimen_10"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:layout_marginBottom="@dimen/dimen_40"
...
