<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.mobdev21_night_at_the_museum.presentation.widget.CollectionView
            android:id="@+id/cvHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dimen_144" />

    </FrameLayout>

</layout>
